--- a/etc/lighttpd/lighttpd.conf
+++ b/etc/lighttpd/lighttpd.conf
@@ -5,5 +5,6 @@ mimetype.assign = (
         ".html" => "text/html",
         ".jpg" => "image/jpeg",
         ".png" => "image/png",
+        ".js" => "text/js",
         ".css" => "text/css"
 )
